# YZ-Odevi

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: README.md
data/sample/: creditcard_sample.csv
models/: amount_scaler.joblib
notebooks/: README.md
reports/: dataset_summary.json  final_report.md  metrics.csv
reports/latex/: final_report_ieee.tex
src/fraud_detection/: __init__.py  config.py  data.py  evaluate.py  generate_sample_data.py  plots.py  rules.py  train.py
src/fraud_detection/stream/: __init__.py  flink_job.py  fraud_detector.py  transaction_producer.py
tests/: test_data_pipeline.py  test_rules.py  test_training.py
